added custom bootstrap-slate changes as less. added gulpfile for task building. made status update after task.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <link rel="apple-touch-startup-image" href="lib/durandal/img/ios-startup-image-portrait.png" media="(orientation:portrait)" />
         <link rel="apple-touch-icon" href="lib/durandal/img/icon.png"/>
         
-        <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/bootstrap-ext.css" />
         <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="css/ie10mobile.css" />
         <link rel="stylesheet" href="lib/durandal/css/durandal.css" />
         <link rel="stylesheet" href="css/awesome-bootstrap-checkbox.css" />
         <link rel="stylesheet" href="node_modules/select2/select2.css" />
         <link rel="stylesheet" href="node_modules/select2/select2-bootstrap.css" />
-        <link rel="stylesheet" href="css/bootstrap-slate.css" />
+        <!-- <link rel="stylesheet" href="css/bootstrap-slate.css" /> -->
         <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css"/>
         <link rel="stylesheet" href="css/starterkit.css" />
 
