--- a/app/project/language/php/index.html
+++ b/app/project/language/php/index.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-lg-12">
         <a class="btn btn-default pull-left" data-bind="click: prev">&laquo; Prev</a>
-        <a class="btn btn-default pull-right" data-bind="click: next">First &raquo;</a>
+        <a class="btn btn-default pull-right" data-bind="click: next">Next &raquo;</a>
     </div>
     <div class="col-lg-12">
         <h2 class="checkbox checkbox-success large">
