--- a/app/project/database/mysql/index.html
+++ b/app/project/database/mysql/index.html
@@ -12,7 +12,7 @@
         <div data-bind="visible: mysql(), with: options">
             <div class="row">
                 <div class="form-group col-lg-6">
-                    <label for="provider-virtualbox">Version:</label>
+                    <label>Version:</label>
                     <ul class="list-inline">
                         <li class="radio radio-success">
                             <input id="php5-5" data-bind="checked: version" type="radio" value="5.5" />
@@ -28,13 +28,17 @@
             </div>
             <div class="row">
                 <div class="form-group col-lg-6">
-                    <label for="password">Root Password:</label>
-                    <input type="password" class="form-control" id="password" placeholder="Root Password" data-bind="value: root_password" />
-                    <p class="alert-danger" data-bind="validationMessage: password"></p>
+                    <label>Root Password:</label>
+                    <div class="input-group">
+                        <input class="form-control" placeholder="Root Password" data-bind="value: root_password, attr: { type: $root.rootPassType }" />
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button" data-bind="text: $root.rootPassText, click: $root.toggleRootPassVisible"></button>
+                        </span>
+                    </div>
                 </div>
                 <div class="form-group col-lg-6">
                     <label>Databases:</label>
-                    <input type="text" class="form-control" id="password" placeholder="Databases" data-bind="select2: $parent.database_config, select2val: databases" />
+                    <input type="text" class="form-control" id="database" placeholder="Databases" data-bind="select2: $parent.database_config, select2val: databases" />
                     <p class="alert-danger" data-bind="validationMessage: databases"></p>
                 </div>
             </div>
@@ -58,8 +62,13 @@
                             </div>
                         </div>
                         <div class="form-group col-lg-5">
-                            <label for="password">Password:</label>
-                            <input type="password" class="form-control" id="password" placeholder="Password" data-bind="value: password, valueUpdate: 'afterkeydown'" />
+                            <label>Password:</label>
+                            <div class="input-group">
+                                <input class="form-control" placeholder="Password" data-bind="value: password, valueUpdate: 'afterkeydown', attr: { type: passType }" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button" data-bind="text: passText, click: togglePassVisible"></button>
+                                </span>
+                            </div>
                         </div>
                     </div>
                     <!-- /ko -->
