--- a/app/project/database/mysql/index.html
+++ b/app/project/database/mysql/index.html
@@ -85,7 +85,7 @@
                         </div>
                         <div class="form-group col-lg-6">
                             <label>Username:</label>
-                            <select class="form-control" data-bind="options: $root.validUsers, optionsText: $root.userHost, optionsValue: $root.userHost, value: username"></select>
+                            <select class="form-control" data-bind="value: username, options: $root.validUsers, optionsText: $root.userHost, optionsValue: $root.userHost"></select>
                         </div>
                         <div class="form-group col-lg-6">
                             <label>Database:</label>
