--- a/app/project/webserver/nginx/index.html
+++ b/app/project/webserver/nginx/index.html
@@ -21,82 +21,22 @@
                     </ul>
                 </div>
             </div>
-            <label data-bind="visible: upstreams().length > 0">Upstreams:</label>
-            <!-- ko foreach: upstreams -->
-            <div class="panel clearfix">
-                <div class="clearfix" style="margin: 5px 5px 0 5px">
-                    <a data-bind="click: $parents[1].removeStream"><i class="fa fa-times pull-right"></i></a>
-                </div>
-                <div class="form-group col-lg-12">
-                    <label>Upstream Name</label>
-                    <input type="text" class="form-control" id="upstream-name" placeholder="Upstream Name" data-bind="value: upstream_name" />
-                    <p class="alert-danger" data-bind="validationMessage: upstream_name"></p>
-                </div>
-                <div class="col-lg-12">
-                    <label data-bind="visible: directives().length > 0">Upstream Directives</label>
-                    <!-- ko foreach: directives -->
-                    <div class="form-group clearfix sub-panel">
-                        <div class="clearfix" style="margin: 5px 5px 0 5px">
-                            <a data-bind="click: $parent.removeDirective"><i class="fa fa-times pull-right"></i></a>
-                        </div>
-                        <div class="form-group col-lg-4">
-                            <label>Name</label>
-                            <input type="text" class="form-control" id="directive" placeholder="Directive Name" data-bind="select2val: directive, select2: $parents[2].directive_config" />
-                            <p class="alert-danger" data-bind="validationMessage: directive"></p>
-                        </div>
-                        <div  class="form-group col-lg-8">
-                            <label>Value</label>
-                            <input type="text" class="form-control" id="value" placeholder="Value" data-bind="value: value" />
-                            <p class="alert-danger" data-bind="validationMessage: value"></p>
-                        </div>
-                    </div>
-                    <!-- /ko -->
-                    <div class="row">
-                        <div class="form-group col-lg-12">
-                            <a class="btn btn-sm btn-default pull-right" data-bind="click: addDirective"><i class="fa fa-plus"></i>  Add directive</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /ko -->
-            <div class="row">
-                <div class="form-group col-lg-12">
-                    <a class="btn btn-sm btn-default pull-right" data-bind="click: $parent.addStream"><i class="fa fa-plus"></i>  Add stream</a>
-                </div>
-            </div>
-            <div class="form-group clearfix">
-                <label data-bind="visible: servers().length > 0">Servers:</label>
-                <!-- ko foreach: servers -->
-                <div class="panel clearfix">
+            <label>Sites:</label>
+            <!-- ko foreach: sites -->
+            <div class="col-lg-12 panel">
+                <label data-bind="visible: upstreams().length > 0">Upstreams:</label>
+                <!-- ko foreach: upstreams -->
+                <div class="clearfix sub-panel">
                     <div class="clearfix" style="margin: 5px 5px 0 5px">
-                        <a data-bind="click: $parents[1].removeServer"><i class="fa fa-times pull-right"></i></a>
+                        <a data-bind="click: $parent.removeStream"><i class="fa fa-times pull-right"></i></a>
                     </div>
-                    <div class="clearfix">
-                        <div class="form-group col-lg-6">
-                            <label>Server Name</label>
-                            <input type="text" class="form-control" id="server-name" placeholder="Server Name" data-bind="value: server_name" />
-                            <p class="alert-danger" data-bind="validationMessage: server_name"></p>
-                        </div>
-                        <div  class="form-group col-lg-6">
-                            <label>Server Aliases</label>
-                            <input type="text" class="form-control" id="server-alias" placeholder="Server Alias" data-bind="select2val: server_aliases, select2: $parents[1].serveraliases_config" />
-                            <p class="alert-danger" data-bind="validationMessage: server_aliases"></p>
-                        </div>
-                    </div>
-                    <div class="clearfix">
-                        <div class="form-group col-lg-6">
-                            <label>Root</label>
-                            <input type="text" class="form-control" id="document-root" placeholder="Document Root" data-bind="value: root" />
-                            <p class="alert-danger" data-bind="validationMessage: root"></p>
-                        </div>
-                        <div  class="form-group col-lg-6">
-                            <label>Listen</label>
-                            <input type="text" class="form-control" id="server-port" placeholder="Server Port" data-bind="value: listen" />
-                            <p class="alert-danger" data-bind="validationMessage: listen"></p>
-                        </div>
+                    <div class="form-group col-lg-12">
+                        <label>Upstream Name</label>
+                        <input type="text" class="form-control" id="upstream-name" placeholder="Upstream Name" data-bind="value: upstream_name" />
+                        <p class="alert-danger" data-bind="validationMessage: upstream_name"></p>
                     </div>
                     <div class="col-lg-12">
-                        <label data-bind="visible: directives().length > 0">Server Directives</label>
+                        <label data-bind="visible: directives().length > 0">Upstream Directives</label>
                         <!-- ko foreach: directives -->
                         <div class="form-group clearfix sub-panel">
                             <div class="clearfix" style="margin: 5px 5px 0 5px">
@@ -104,12 +44,12 @@
                             </div>
                             <div class="form-group col-lg-4">
                                 <label>Name</label>
-                                <input type="text" class="form-control" id="server_directive" placeholder="Directive Name" data-bind="select2val: directive, select2: $root.server_directive_config" />
+                                <input type="text" class="form-control" id="directive" placeholder="Directive Name" data-bind="select2val: directive, select2: $root.directive_config" />
                                 <p class="alert-danger" data-bind="validationMessage: directive"></p>
                             </div>
                             <div  class="form-group col-lg-8">
                                 <label>Value</label>
-                                <input type="text" class="form-control" id="server_directive_value" placeholder="Directive Value" data-bind="value: value" />
+                                <input type="text" class="form-control" id="value" placeholder="Value" data-bind="value: value" />
                                 <p class="alert-danger" data-bind="validationMessage: value"></p>
                             </div>
                         </div>
@@ -120,55 +60,118 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12">
-                        <label data-bind="visible: locations().length > 0">Locations:</label>
-                        <!-- ko foreach: locations -->
-                        <div class="form-group clearfix sub-panel">
-                            <div class="clearfix" style="margin: 5px 5px 0 5px">
-                                <a data-bind="click: $parent.removeLocation"><i class="fa fa-times pull-right"></i></a>
+                </div>
+                <!-- /ko -->
+                <div class="row">
+                    <div class="form-group col-lg-12">
+                        <a class="btn btn-sm btn-default pull-right" data-bind="click: addStream"><i class="fa fa-plus"></i>  Add stream</a>
+                    </div>
+                </div>
+                <div class="form-group clearfix">
+                    <label data-bind="visible: servers().length > 0">Servers:</label>
+                    <!-- ko foreach: servers -->
+                    <div class="form-group sub-panel clearfix">
+                        <div class="clearfix" style="margin: 5px 5px 0 5px">
+                            <a data-bind="click: $parent.removeServer"><i class="fa fa-times pull-right"></i></a>
+                        </div>
+                        <div class="clearfix">
+                            <div class="form-group col-lg-6">
+                                <label>Server Name</label>
+                                <input type="text" class="form-control" id="server-name" placeholder="Server Name" data-bind="value: server_name" />
+                                <p class="alert-danger" data-bind="validationMessage: server_name"></p>
                             </div>
-                            <div class="form-group col-lg-12">
-                                <label>Path</label>
-                                <input type="text" class="form-control" id="location-path" placeholder="Location Path" data-bind="value: path" />
-                                <p class="alert-danger" data-bind="validationMessage: path"></p>
+                            <div  class="form-group col-lg-6">
+                                <label>Listen</label>
+                                <input type="text" class="form-control" id="server-port" placeholder="Server Port" data-bind="value: listen" />
+                                <p class="alert-danger" data-bind="validationMessage: listen"></p>
                             </div>
-                            <div class="col-lg-12">
-                                <label data-bind="visible: directives().length > 0">Location Directives</label>
-                                <!-- ko foreach: directives -->
-                                <div class="form-group clearfix sub-panel">
-                                    <div class="clearfix" style="margin: 5px 5px 0 5px">
-                                        <a data-bind="click: $parent.removeDirective"><i class="fa fa-times pull-right"></i></a>
-                                    </div>
-                                    <div class="form-group col-lg-4">
-                                        <label>Name</label>
-                                        <input type="text" class="form-control" id="location_directive" placeholder="Directive Name" data-bind="select2val: directive, select2: $root.server_directive_config" />
-                                        <p class="alert-danger" data-bind="validationMessage: directive"></p>
-                                    </div>
-                                    <div  class="form-group col-lg-8">
-                                        <label>Value</label>
-                                        <input type="text" class="form-control" id="location_directive_value" placeholder="Directive Value" data-bind="value: value" />
-                                        <p class="alert-danger" data-bind="validationMessage: value"></p>
-                                    </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <label data-bind="visible: directives().length > 0">Server Directives</label>
+                            <!-- ko foreach: directives -->
+                            <div class="form-group clearfix sub-panel">
+                                <div class="clearfix" style="margin: 5px 5px 0 5px">
+                                    <a data-bind="click: $parent.removeDirective"><i class="fa fa-times pull-right"></i></a>
                                 </div>
-                                <!-- /ko -->
-                                <div class="row">
-                                    <div class="form-group col-lg-12">
-                                        <a class="btn btn-sm btn-default pull-right" data-bind="click: addDirective"><i class="fa fa-plus"></i>  Add directive</a>
-                                    </div>
+                                <div class="form-group col-lg-4">
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" id="server_directive" placeholder="Directive Name" data-bind="select2val: directive, select2: $root.server_directive_config" />
+                                    <p class="alert-danger" data-bind="validationMessage: directive"></p>
+                                </div>
+                                <div  class="form-group col-lg-8">
+                                    <label>Value</label>
+                                    <input type="text" class="form-control" id="server_directive_value" placeholder="Directive Value" data-bind="value: value" />
+                                    <p class="alert-danger" data-bind="validationMessage: value"></p>
+                                </div>
+                            </div>
+                            <!-- /ko -->
+                            <div class="row">
+                                <div class="form-group col-lg-12">
+                                    <a class="btn btn-sm btn-default pull-right" data-bind="click: addDirective"><i class="fa fa-plus"></i>  Add directive</a>
                                 </div>
                             </div>
                         </div>
-                        <!-- /ko -->
-                        <div class="row">
-                            <div class="form-group col-lg-12">
-                                <a class="btn btn-sm btn-default pull-right" data-bind="click: addLocation"><i class="fa fa-plus"></i>  Add location</a>
+                        <div class="col-lg-12">
+                            <label data-bind="visible: locations().length > 0">Locations:</label>
+                            <!-- ko foreach: locations -->
+                            <div class="form-group clearfix sub-panel">
+                                <div class="clearfix" style="margin: 5px 5px 0 5px">
+                                    <a data-bind="click: $parent.removeLocation"><i class="fa fa-times pull-right"></i></a>
+                                </div>
+                                <div class="form-group col-lg-12">
+                                    <label>Path</label>
+                                    <input type="text" class="form-control" id="location-path" placeholder="Location Path" data-bind="value: path" />
+                                    <p class="alert-danger" data-bind="validationMessage: path"></p>
+                                </div>
+                                <div class="col-lg-12">
+                                    <label data-bind="visible: directives().length > 0">Location Directives</label>
+                                    <!-- ko foreach: directives -->
+                                    <div class="form-group clearfix sub-panel">
+                                        <div class="clearfix" style="margin: 5px 5px 0 5px">
+                                            <a data-bind="click: $parent.removeDirective"><i class="fa fa-times pull-right"></i></a>
+                                        </div>
+                                        <div class="form-group col-lg-4">
+                                            <label>Name</label>
+                                            <input type="text" class="form-control" id="location_directive" placeholder="Directive Name" data-bind="select2val: directive, select2: $root.server_directive_config" />
+                                            <p class="alert-danger" data-bind="validationMessage: directive"></p>
+                                        </div>
+                                        <div  class="form-group col-lg-8">
+                                            <label>Value</label>
+                                            <input type="text" class="form-control" id="location_directive_value" placeholder="Directive Value" data-bind="value: value" />
+                                            <p class="alert-danger" data-bind="validationMessage: value"></p>
+                                        </div>
+                                    </div>
+                                    <!-- /ko -->
+                                    <div class="row">
+                                        <div class="form-group col-lg-12">
+                                            <a class="btn btn-sm btn-default pull-right" data-bind="click: addDirective"><i class="fa fa-plus"></i>  Add directive</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /ko -->
+                            <div class="row">
+                                <div class="form-group col-lg-12">
+                                    <a class="btn btn-sm btn-default pull-right" data-bind="click: addLocation"><i class="fa fa-plus"></i>  Add location</a>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <!-- /ko -->
+                    <div class="row">
+                        <div class="form-group col-lg-12">
+                            <a class="btn btn-sm btn-default pull-right" data-bind="click: addServer"><i class="fa fa-plus"></i>  Add server</a>
+                        </div>
+                    </div>
                 </div>
-                <!-- /ko -->
-                <a class="btn btn-sm btn-default pull-right" data-bind="click: $parent.addServer"><i class="fa fa-plus"></i>  Add server</a>
             </div>
+            <!-- /ko -->
+            <div class="row">
+                <div class="form-group col-lg-12">
+                    <a class="btn btn-sm btn-default pull-right" data-bind="click: $root.addSite"><i class="fa fa-plus"></i>  Add site</a>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
