--- a/app/project/edit.html
+++ b/app/project/edit.html
@@ -1,32 +1,26 @@
 ﻿<section>
     <div data-bind="compose: header"></div>
-    <div class="col-lg-12" data-bind="with: project">
-        <div class="form-group col-lg-6">
-            <label for="project-name">Project Name:</label>
-            <input type="text" class="form-control" id="project-name" placeholder="Enter a project name" data-bind="value: name, attr: $parent.disableExisting" />
-            <p class="alert-danger" data-bind="validationMessage: name"></p>
-        </div>
-        <div class="form-group col-lg-6">
-            <label for="project-path">Project Path:</label>
-            <!-- ko if: isNewRecord -->
-            <input type="file" class="form-control" id="project-path" nwdirectory data-bind="event: { change: $parent.setPath }" />
-            <p class="alert-danger" data-bind="validationMessage: path"></p>
-            <p class="alert-success alert-dismissable" data-bind="text: path"></p>
-            <!-- /ko -->
-            <!-- ko ifnot: isNewRecord -->
-            <input class="form-control" data-bind="value: path" disabled="disabled" />
-            <!-- /ko -->
-        </div>
-    </div>
-    <div class="col-lg-12">
-        <div class="col-lg-4 panel-group" id="sidebar">
-            <div class="panel panel-default" data-bind="compose: sideNav">
-            </div>
-            <div style="padding-top: 20px;text-align: center">
+
+    <div class="col-md-12 col-lg-12">
+        <div class="col-md-3 col-lg-3 panel-group" id="sidebar">
+            <div class="panel panel-default" data-bind="compose: sideNav"></div>
+            <br />
+            <p>
                 <a class="btn btn-success btn-lg btn-block" data-bind="click: createProject, text: saveText"></a>
-            </div>
+            </p>
         </div>
-        <div class="col-lg-8 tab-content">
+        <div class="col-md-9 col-lg-9 tab-content">
+            <div class="row" data-bind="with: project">
+                <div class="form-group col-lg-6">
+                    <label for="project-name">Project Name:</label>
+                    <input type="text" class="form-control" id="project-name" placeholder="Enter a project name" data-bind="value: name, attr: $parent.disableExisting" />
+                    <p class="alert-danger" data-bind="validationMessage: name"></p>
+                </div>
+                <div class="form-group col-lg-6">
+                    <label for="project-path">Project Path:</label>
+                    <input class="form-control" data-bind="value: path" disabled="disabled" />
+                </div>
+            </div>
             <!--ko router: { cacheViews:false }--><!--/ko-->
         </div>
     </div>
