--- a/app/addons/packages/index.html
+++ b/app/addons/packages/index.html
@@ -8,11 +8,11 @@
         <a class="btn btn-default pull-right" data-bind="click: next">Next &raquo;</a>
         <!-- /ko -->
     </span>
-    <div class="col-lg-12">
+    <div class="col-lg-12" data-bind="with: data">
         <h2>System Packages</h2>
         <div class="form-group">
             <label for="packages">System Packages:</label>
-            <input type="text" id="packages" class="form-control" data-bind="select2val: packages, select2: packages_config" />
+            <input type="text" id="packages" class="form-control" data-bind="select2val: packages, select2: $root.packages_config" />
         </div>
     </div>
 </div>
