--- a/app/addons/php/index.html
+++ b/app/addons/php/index.html
@@ -8,12 +8,12 @@
         <a class="btn btn-default pull-right" data-bind="click: next">Next &raquo;</a>
         <!-- /ko -->
     </div>
-    <div class="col-lg-12">
+    <div class="col-lg-12" data-bind="with: data">
         <h2 class="checkbox checkbox-success large">
-            <input id="php" data-bind="checked: php" type="checkbox" value="php" />
+            <input id="php" data-bind="checked: install" type="checkbox" value="php" />
             <label for="php">Install PHP</label>
         </h2>
-        <div data-bind="visible: php(), with: options">
+        <div data-bind="visible: install, with: options">
             <div class="row">
                 <div class="form-group col-lg-12">
                     <label for="php-5-5">Version:</label>
