--- a/app/addons/users/index.html
+++ b/app/addons/users/index.html
@@ -8,15 +8,15 @@
         <!-- /ko -->
     </span>
 
-    <div class="col-lg-12">
+    <div class="col-lg-12" data-bind="with: data">
         <h2>Users & Groups</h2>
         <div class="form-group">
             <label for="users">System Users:</label>
-            <input type="text" id="users" class="form-control" data-bind="select2val: users, select2: users_config" />
+            <input type="text" id="users" class="form-control" data-bind="select2val: users, select2: $root.users_config" />
         </div>
         <div class="form-group">
             <label for="groups">System Groups:</label>
-            <input type="text" id="groups" class="form-control" data-bind="select2val: groups, select2: groups_config" />
+            <input type="text" id="groups" class="form-control" data-bind="select2val: groups, select2: $root.groups_config" />
         </div>
     </div>
 </div>
