--- a/app/addons/ruby/index.html
+++ b/app/addons/ruby/index.html
@@ -1,4 +1,4 @@
-<div class="row" data-bind="with: data">
+<div class="row">
     <div class="col-lg-12">
         <!-- ko if: $data.prev -->
         <a class="btn btn-default pull-left" data-bind="click: prev">&laquo; Prev</a>
@@ -14,7 +14,7 @@
         </h2>
         <span class="text-info">Ruby can not be removed as it is requirement of puppet.</span>
     </div>
-    <div data-bind="with: options">
+    <div data-bind="with: data().options">
         <div class="row">
             <div class="form-group col-lg-12">
                 <div class="form-group col-lg-12">
