--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
                 <i class="fa fa-spinner fa-spin"></i>
             </div>
         </div>
-        <script src="lib/require/require.js" data-main="app/main"></script>
+        <script src="lib/requirejs/require.js" data-main="app/main"></script>
     </body>
 </html>
