--- a/app/project/list.html
+++ b/app/project/list.html
@@ -23,7 +23,8 @@
             <!-- ko foreach: projects -->
             <tr data-bind="css: statusCss">
                 <td data-bind="text: name"></td>
-                <td data-bind="text: targetMachine"></td>
+                <!-- <td data-bind="text: targetMachine"></td> @todo readd this code -->
+                <td></td>
                 <td data-bind="text: status"></td>
                 <td class="form-actions">
                     <div class="btn-group drop">
