--- a/app/addons/do/index.html
+++ b/app/addons/do/index.html
@@ -8,11 +8,11 @@
         <!-- /ko -->
     </div>
 </div>
-<h2 class="radio radio-success large">
-    <input id="do" data-bind="checked: target" type="radio" value="do" />
+<h2 class="checkbox checkbox-success large">
+    <input id="do" data-bind="checked: data().install" type="checkbox" value="do" />
     <label for="do">Deploy on Digital Ocean</label>
 </h2>
-<div data-bind="visible: target()=='do', with: data().options">
+<div data-bind="visible: data().install, with: data().options">
     <div class="row">
         <div class="form-group col-lg-12">
             <label for="distro-ubuntu140464">Select a distribution:</label>
