--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- <link rel="stylesheet" href="css/bootstrap-slate.css" /> -->
         <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css"/>
         <link rel="stylesheet" href="css/starterkit.css" />
-
+        <script src="http://localhost:35729/livereload.js"></script>
         <script type="text/javascript">
             /*
              * Added to fix issues between nodejs and requirejs.
