got tests working with durandal. more work on restructure.

--- a/app/addons/index.html
+++ b/app/addons/index.html
@@ -4,6 +4,9 @@
         <em>List of all addons and their statuses.</em>
     </div>
     <div class="col-lg-12">
+        <p class="clearfix">
+            <a class="btn btn-success pull-right" href="#" data-bind="click: refreshAddons">Refresh Addons</a>
+        </p>
         <table class="table table-bordered table-condensed">
             <tbody>
             <!-- ko foreach: types -->
