--- a/app/addons/aws/index.html
+++ b/app/addons/aws/index.html
@@ -1,13 +1,4 @@
-<div class="row">
-    <div class="col-lg-12">
-        <!-- ko if: $data.prev -->
-        <a class="btn btn-default pull-left" data-bind="click: prev">&laquo; Prev</a>
-        <!-- /ko -->
-        <!-- ko if: $data.next -->
-        <a class="btn btn-default pull-right" data-bind="click: next">Next &raquo;</a>
-        <!-- /ko -->
-    </div>
-</div>
+<c-nav params="name: name, type: type"></c-nav>
 <h2 class="checkbox checkbox-success large">
     <input id="do" data-bind="checked: data().install" type="checkbox" value="aws" />
     <label for="do">Deploy on Amazon EC2</label>
