--- a/app/addons/packages/index.html
+++ b/app/addons/packages/index.html
@@ -1,13 +1,5 @@
-
+<c-nav params="name: name, type: type"></c-nav>
 <div class="row">
-    <span class="col-lg-12">
-        <!-- ko if: $data.prev -->
-        <a class="btn btn-default pull-left" data-bind="click: prev">&laquo; Prev</a>
-        <!-- /ko -->
-        <!-- ko if: $data.next -->
-        <a class="btn btn-default pull-right" data-bind="click: next">Next &raquo;</a>
-        <!-- /ko -->
-    </span>
     <div class="col-lg-12" data-bind="with: data">
         <h2>System Packages</h2>
         <div class="form-group">
