--- a/app/addons/redis/index.html
+++ b/app/addons/redis/index.html
@@ -1,13 +1,5 @@
-
+<c-nav params="name: name, type: type"></c-nav>
 <div class="row">
-    <div class="col-lg-12">
-        <!-- ko if: $data.prev -->
-        <a class="btn btn-default pull-left" data-bind="click: prev">&laquo; Prev</a>
-        <!-- /ko -->
-        <!-- ko if: $data.next -->
-        <a class="btn btn-default pull-right" data-bind="click: next">Next &raquo;</a>
-        <!-- /ko -->
-    </div>
     <div class="col-lg-12" data-bind="with: data">
         <h2 class="checkbox checkbox-success large">
             <input id="redis" data-bind="checked: install" type="checkbox" value="redis" />
